[gd_scene load_steps=8 format=3 uid="uid://sx1h3m2ocp8k"]

[ext_resource type="Script" path="res://scripts/World/bronze_pickaxe.gd" id="1_3wna3"]
[ext_resource type="Texture2D" uid="uid://x88mj4sbktjg" path="res://Assets/Art/Sprout Lands - Sprites - premium pack/Objects/Items/tools-n-meterial-items.png" id="2_5atmt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c4ups"]
size = Vector2(8.5, 10)

[sub_resource type="Animation" id="Animation_r7vas"]
resource_name = "ItemDissapear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_oyrf3"]
resource_name = "ItemFloat"
length = 6.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 3, 4.5, 6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 3), Vector2(0, 0), Vector2(0, -3), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_t1psj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, -1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0oi32"]
_data = {
"ItemDissapear": SubResource("Animation_r7vas"),
"ItemFloat": SubResource("Animation_oyrf3"),
"RESET": SubResource("Animation_t1psj")
}

[node name="BronzePickaxe" type="Node2D"]
script = ExtResource("1_3wna3")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(1, -1)
texture = ExtResource("2_5atmt")
region_enabled = true
region_rect = Rect2(16.9509, 0, 14.4255, 15.8642)

[node name="PurchaseArea" type="Area2D" parent="."]
modulate = Color(1, 1, 1, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PurchaseArea"]
position = Vector2(1, -1)
shape = SubResource("RectangleShape2D_c4ups")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0oi32")
}
autoplay = "ItemFloat"

[connection signal="body_entered" from="PurchaseArea" to="." method="_on_purchase_area_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
